Poging tot het maken van een register screen waarbij men accounts kan aanmaken. Probleem ==> acount wordt opgeslagen maar laat ons niet inloggen.

--- a/Portfolio-Mehmet-Schepens/CSS/login.css
+++ b/Portfolio-Mehmet-Schepens/CSS/login.css
@@ -19,6 +19,7 @@ body {
     margin: 50px;
     box-shadow: 0 0 10px white ;
     font-weight: bold;
+    width: 300px;
 }
 #username{
     display: flex;
