--- a/Portfolio-Mehmet-Schepens/CSS/register.css
+++ b/Portfolio-Mehmet-Schepens/CSS/register.css
@@ -1,44 +1,102 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(26, 25, 25);
+  height: 100vh;
+  margin: 0;
+  font-family: "Kode Mono", monospace;
+  background-image: url(/Portfolio-Mehmet-Schepens/Pictures/login-background.jpg);
+}
+
+.login-form {
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  padding: 15px 60px 60px 60px;
+  border-radius: 10px;
+  margin: 50px;
+  box-shadow: 0 0 10px white ;
+  font-weight: bold;
+  width: 300px;
+}
+#username2{
+  display: flex;
+  gap: 10px;
+}
+#username-logo, #password-logo{
+  padding-top: 5px;
+  align-items: center;
+}
+
+#password2{
+  display: flex;
+  gap: 10px;
+}
+
+#save-button {
+  margin-top: 20px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  font-size: large;
+  border-radius: 20px;
+  padding: 10px 20px 10px 20px;
   
-  .container {
-    width: 300px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    margin-bottom: 5px;
-  }
-  
-  input {
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
-  button {
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+}
+#save-button:hover{
+  box-shadow: 0 0 10px black ;
+}
+
+#p-i {
+  width: 200px;
+}
+
+footer {
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 50px;
+  box-shadow: 0 0 10px white ;
+}
+.input{
+  border-radius: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid black;
+  padding: 5px;
+  box-shadow: 0 0 5px black ;  
+}
+label, .input {
+  margin-bottom: 10px;
+}
+header{
+  color: white;
+}
+
+#help-button{
+  margin-left: 100% ;
+  width: 40px;
+}
+#help-button:hover{
+  width: 43px;
+}
+
+#register-button{
+  margin-top: 20px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  font-size: smaller;
+  border-radius: 20px;
+  padding: 5px 10px 5px 10px;
+}
+#register-button:hover{
+  background-color: rgb(26, 26, 26);
+}
