--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -37,7 +37,7 @@ main h1 {
   background-color: rgb(14, 13, 13);
   padding: 15px;
   border-radius: 20px;
-  box-shadow: 0 0 10px rgb(20, 106, 226);
+  box-shadow: 0 0 10px white;
   font-size: 20px;
 }
 #container-calendar {
@@ -83,7 +83,19 @@ main h1 {
   flex-direction: column;
   margin-left:20px;
 }
-#buttonNota{
+#buttonNota {
   background-color: rgb(14, 13, 13);
   color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
+
+#buttonNota:hover {
+  background-color: #333;
+  color: #fff;
+}
+
