--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -69,7 +69,7 @@ main h1 {
   align-items: center;
   font-size: larger;
 }
-#note-container{
+.note{
   background-color: rgb(14, 13, 13);
   color: white;
   border-radius: 10px;
@@ -83,7 +83,7 @@ main h1 {
   flex-direction: column;
   margin-left:20px;
 }
-#buttonNota {
+.add_note {
   background-color: rgb(14, 13, 13);
   color: white;
   border: 2px solid white;
@@ -94,8 +94,10 @@ main h1 {
   transition: background-color 0.3s, color 0.3s;
 }
 
-#buttonNota:hover {
+.add_note:hover {
   background-color: #333;
   color: #fff;
 }
-
+.notes{
+  gap: 20px;
+}
