Opzoeken van API + extra
invoegen van commentaar in home-code. Beginnen opzoeken van API voor fetch en aanpassen van

--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -98,5 +98,11 @@ main h1 {
   background-color: #333;
   color: #fff;
 }
+.picSearcher h1{
+  width:fit-content ;
+  margin-left: 20px;
+  align-items: center;
+  justify-content: center;
+}
 
 
