--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -45,43 +45,43 @@ main h1 {
   margin-right: 50px;
 }
 #container-notes {
-  margin-right: 50px;
+  margin-left: 20px;
 }
-#logOut{
+#logOut {
   width: 30px;
 }
-#navigation{
+#navigation {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
-#left-nav{
+#left-nav {
   display: flex;
   align-items: center;
 }
-#right-nav{
+#right-nav {
   display: flex;
-  align-items:end;
+  align-items: end;
   margin: 15px;
 }
-#mid-container{
+#mid-container {
   display: flex;
   align-items: center;
   font-size: larger;
 }
-.note{
+.note {
   background-color: rgb(14, 13, 13);
   color: white;
   border-radius: 10px;
   padding: 20px;
-  margin-bottom:10px ;
+  margin-bottom: 10px;
   margin-top: 20px;
 }
-#notas{
+#notas {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-left:20px;
+  margin-left: 20px;
 }
 .add_note {
   background-color: rgb(14, 13, 13);
@@ -98,11 +98,65 @@ main h1 {
   background-color: #333;
   color: #fff;
 }
-.picSearcher h1{
-  width:fit-content ;
-  margin-left: 20px;
+
+.picSearcher p{
+  color: white;
+  background-color: rgb(14, 13, 13);
+  padding: 15px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px white;
+  font-size: 20px;
+}
+.picSearcher {
+  display: flex;
+  flex-direction: column;
+  width: 475.75px;
+  margin-bottom: 15px;
+}
+
+#pictureSearcher {
+  display: flex;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.low-mid-container{
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  margin-left: 20px;
+}
+#picSearchBtn{
+  background-color: rgb(14, 13, 13);
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+#picSearchBtn:hover {
+  background-color: #333;
+  color: #fff;
+}
+#picOutput{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   justify-content: center;
 }
 
+.pic-container img{
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  margin-left:5px ;
+  border-width: 1px;
+  border-color: white;
+}
+
+/* CSS animation */
 
