--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -99,7 +99,7 @@ main h1 {
   color: #fff;
 }
 
-.picSearcher p{
+.picSearcher p {
   color: white;
   background-color: rgb(14, 13, 13);
   padding: 15px;
@@ -122,13 +122,13 @@ main h1 {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-.low-mid-container{
+.low-mid-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-left: 20px;
 }
-#picSearchBtn{
+#picSearchBtn {
   background-color: rgb(14, 13, 13);
   color: white;
   border: 2px solid white;
@@ -142,21 +142,83 @@ main h1 {
   background-color: #333;
   color: #fff;
 }
-#picOutput{
+#picOutput {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
 }
-
-.pic-container img{
+.pic-container img {
   width: 100%;
   height: 200px;
   border-radius: 5px;
-  margin-left:5px ;
-  border-width: 1px;
-  border-color: white;
+  margin-left: 5px;
+  box-shadow: 0 0 5px white;
 }
 
 /* CSS animation */
 
+.squareAnimation {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+}
+
+@keyframes moveAndChangeColor {
+  0% {
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    transform: rotate(0deg);
+    border-radius: 10px;
+  }
+  25% {
+    left: 25%;
+    background-color: rgb(34, 34, 34);
+    transform: rotate(90deg);
+    border-radius: 20px;
+  }
+  50% {
+    left: 50%;
+    background-color: rgb(255, 255, 255);
+    transform: rotate(180deg);
+    border-radius: 10px;
+  }
+  75% {
+    left: 75%;
+    background-color: rgb(34, 34, 34);
+    transform: rotate(270deg);
+    border-radius: 20px;
+  }
+  100% {
+    left: 100%;
+    background-color: rgb(255, 255, 255);
+    transform: rotate(360deg);
+    border-radius: 10px;
+  }
+}
+#checkbox-container {
+  margin-right: 50px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#checkbox {
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+#checkbox:checked {
+  animation: moveAndChangeColor 4s infinite;
+}
+.squareAnimation.animate {
+  animation: moveAndChangeColor 4s infinite;
+}
