--- a/Portfolio-Mehmet-Schepens/CSS/home.css
+++ b/Portfolio-Mehmet-Schepens/CSS/home.css
@@ -157,7 +157,7 @@ main h1 {
   box-shadow: 0 0 5px white;
 }
 
-/* CSS animation */
+/* CSS animatie */
 
 .squareAnimation {
   position: relative;
